--- a/index.html
+++ b/index.html
@@ -61,10 +61,75 @@
 
 			<section class="services">
 				<h2>Services</h2>
-				<p>The services I provide for my clients are building websites that are responsive
-				</p>
+				<div class="services-container">
+<!--										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore-->
+<!--											magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo-->
+<!--											consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.-->
+<!--											Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.-->
+<!--										</p>-->
+<!--										<p>-->
+<!--											Purus gravida quis blandit turpis cursus in. Cursus metus aliquam eleifend mi in nulla posuere. Commodo ullamcorper-->
+<!--											a lacus vestibulum sed arcu. Ut porttitor leo a diam sollicitudin tempor id eu. Ornare massa eget egestas purus-->
+<!--											viverra accumsan in. Duis ut diam quam nulla porttitor massa id neque aliquam. Amet consectetur adipiscing elit-->
+<!--											ut aliquam purus sit. Enim sit amet venenatis urna cursus eget nunc scelerisque. Volutpat maecenas volutpat-->
+<!--											blandit aliquam etiam erat velit scelerisque in. Lectus arcu bibendum at varius vel pharetra vel turpis nunc.-->
+<!--											Ultrices eros in cursus turpis massa tincidunt dui. Fames ac turpis egestas sed tempus urna et pharetra. Nunc-->
+<!--											non blandit massa enim nec. Imperdiet sed euismod nisi porta lorem mollis aliquam ut. Elementum tempus egestas-->
+<!--											sed sed risus pretium quam vulputate dignissim. Ornare massa eget egestas purus. Amet venenatis urna cursus-->
+<!--											eget nunc scelerisque viverra.-->
+<!--										</p>-->
+
+					<ul class="jobs">
+						<li>General Lot/Land Clearing</li>
+						<li>Small tree and Fallen Tree Removal</li>
+						<li>Bushes and Shrub Removal</li>
+						<li>Asphalt and Concrete Removal</li>
+						<li>Gravel or Dirt Road Repair</li>
+						<li>Culvert Installation or Removal</li>
+						<li>Pond Landscaping</li>
+						<li>Small Building or Shed Removal</li><br><br>
+						<p>*Fully Licensed and Insured*</p>
+					</ul>
+				</div>
 			</section>
-			<footer>Contact us!</footer>
+			<footer class="bg-footer">
+				<section class="footer-top">
+					<div class="footer-col">
+						<div class="contact-info">
+							<ul>
+								<!--								<li><img src="./assets/images/map-pin.svg" alt="location" class="icons">630 W 21st St Newton, NC <br>-->
+								<!--									<span class="inside">(Inside Reaves Chiropractic)</span></li>-->
+								<li><img src="./assets/images/mobile.svg" alt="mobile" class="icons phone email"><a
+									href="tel:(+1) 828-455-3152"	class="tel">(+1) 828-455-3152</a>
+									<br><span class="inside">(Call/text)</span>
+								</li>
+								<li><img src="./assets/images/mail.svg" alt="mail" class="icons"><a
+									href="mailto:LHRwoodworking@gmail.com" class="email">LHRwoodworking@gmail.com</a></li>
+							</ul>
+						</div>
+					</div>
+				</section>
+
+				<section class="footer-bottom">
+					<div class="footer-bottom-wrapper">
+						<div class="copyright">
+							<p>
+								<a href="https://developerofcode.com" target="_blank" class="developer"><span>Built by</span><img
+									src="./assets/images/DOC_logo_3_logo_only_transparent-BG.gif"
+									alt="Developer Of Code, LLC's company logo"><span class="dev">Developer Of Code, LLC</span></a></p>
+
+						</div>
+						<!--						<div class="footer-bottom-links">-->
+						<!--							<ul>-->
+						<!--								<li><a href="index.html">Home</a></li>-->
+						<!--								<li><a href="products.html">Products</a></li>-->
+						<!--								<li><a href="contact.html">Contact</a></li>-->
+						<!--								<li><a href="#">FAQ</a></li>-->
+						<!--							</ul>-->
+						<!--						</div>-->
+					</div>
+				</section>
+			</footer>
 		</div>
 	</body>
 </html>
