--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Home | LHR Woodworking, LLC</title>
 		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="css/responsive.css">
 		<link rel="stylesheet" href="css/default.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,8 +16,9 @@
 	<body>
 		<div class="container">
 			<header><h1>LHR Woodworking</h1></header>
+			<img src="assets/images/LHR-Grading.png" alt="">
 			<nav>
-				<img src="assets/images/LHR-Grading.png" alt="">
+
 				<ul class="navbar-nav">
 						<li class="nav-link">
 							<a href="index.html">Home</a>
