--- a/index.html
+++ b/index.html
@@ -15,25 +15,26 @@
 	</head>
 	<body>
 		<div class="container">
-			<header><h1>LHR Woodworking</h1></header>
 			<img src="assets/images/LHR-Grading.png" alt="">
 			<nav>
 
 				<ul class="navbar-nav">
-						<li class="nav-link">
-							<a href="index.html">Home</a>
-						</li>
-						<li class="nav-link">
-							<a href="products.html">Products</a>
-						</li>
-						<li class="nav-link">
-							<a href="contact.html">Contact</a>
-						</li>
-<!--						<li class="nav-link">-->
-<!--							<a href="faq.html">FAQ</a>-->
-<!--						</li>-->
+					<li class="nav-link">
+						<a href="index.html">Home</a>
+					</li>
+					<li class="nav-link">
+						<a href="products.html">Products</a>
+					</li>
+					<li class="nav-link">
+						<a href="contact.html">Contact</a>
+					</li>
+					<!--						<li class="nav-link">-->
+					<!--							<a href="faq.html">FAQ</a>-->
+					<!--						</li>-->
 				</ul>
 			</nav>
+
+			<header><h1>LHR Woodworking</h1></header>
 			<section class="products">
 				<h2>Products</h2>
 				<div class="before-after">
@@ -62,36 +63,38 @@
 			</section>
 
 			<section class="services">
-				<h2>Services</h2>
-				<div class="services-container">
-<!--										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore-->
-<!--											magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo-->
-<!--											consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.-->
-<!--											Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.-->
-<!--										</p>-->
-<!--										<p>-->
-<!--											Purus gravida quis blandit turpis cursus in. Cursus metus aliquam eleifend mi in nulla posuere. Commodo ullamcorper-->
-<!--											a lacus vestibulum sed arcu. Ut porttitor leo a diam sollicitudin tempor id eu. Ornare massa eget egestas purus-->
-<!--											viverra accumsan in. Duis ut diam quam nulla porttitor massa id neque aliquam. Amet consectetur adipiscing elit-->
-<!--											ut aliquam purus sit. Enim sit amet venenatis urna cursus eget nunc scelerisque. Volutpat maecenas volutpat-->
-<!--											blandit aliquam etiam erat velit scelerisque in. Lectus arcu bibendum at varius vel pharetra vel turpis nunc.-->
-<!--											Ultrices eros in cursus turpis massa tincidunt dui. Fames ac turpis egestas sed tempus urna et pharetra. Nunc-->
-<!--											non blandit massa enim nec. Imperdiet sed euismod nisi porta lorem mollis aliquam ut. Elementum tempus egestas-->
-<!--											sed sed risus pretium quam vulputate dignissim. Ornare massa eget egestas purus. Amet venenatis urna cursus-->
-<!--											eget nunc scelerisque viverra.-->
-<!--										</p>-->
+				<div class="services-block">
+					<h2>Services</h2>
+					<div class="services-container">
+	<!--										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore-->
+	<!--											magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo-->
+	<!--											consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.-->
+	<!--											Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.-->
+	<!--										</p>-->
+	<!--										<p>-->
+	<!--											Purus gravida quis blandit turpis cursus in. Cursus metus aliquam eleifend mi in nulla posuere. Commodo ullamcorper-->
+	<!--											a lacus vestibulum sed arcu. Ut porttitor leo a diam sollicitudin tempor id eu. Ornare massa eget egestas purus-->
+	<!--											viverra accumsan in. Duis ut diam quam nulla porttitor massa id neque aliquam. Amet consectetur adipiscing elit-->
+	<!--											ut aliquam purus sit. Enim sit amet venenatis urna cursus eget nunc scelerisque. Volutpat maecenas volutpat-->
+	<!--											blandit aliquam etiam erat velit scelerisque in. Lectus arcu bibendum at varius vel pharetra vel turpis nunc.-->
+	<!--											Ultrices eros in cursus turpis massa tincidunt dui. Fames ac turpis egestas sed tempus urna et pharetra. Nunc-->
+	<!--											non blandit massa enim nec. Imperdiet sed euismod nisi porta lorem mollis aliquam ut. Elementum tempus egestas-->
+	<!--											sed sed risus pretium quam vulputate dignissim. Ornare massa eget egestas purus. Amet venenatis urna cursus-->
+	<!--											eget nunc scelerisque viverra.-->
+	<!--										</p>-->
 
-					<ul class="jobs">
-						<li>General Lot/Land Clearing</li>
-						<li>Small tree and Fallen Tree Removal</li>
-						<li>Bushes and Shrub Removal</li>
-						<li>Asphalt and Concrete Removal</li>
-						<li>Gravel or Dirt Road Repair</li>
-						<li>Culvert Installation or Removal</li>
-						<li>Pond Landscaping</li>
-						<li>Small Building or Shed Removal</li><br><br>
-						<p>*Fully Licensed and Insured*</p>
-					</ul>
+						<ul class="jobs">
+							<li>General Lot/Land Clearing</li>
+							<li>Small tree and Fallen Tree Removal</li>
+							<li>Bushes and Shrub Removal</li>
+							<li>Asphalt and Concrete Removal</li>
+							<li>Gravel or Dirt Road Repair</li>
+							<li>Culvert Installation or Removal</li>
+							<li>Pond Landscaping</li>
+							<li>Small Building or Shed Removal</li><br><br>
+							<p>*Fully Licensed and Insured*</p>
+						</ul>
+					</div>
 				</div>
 			</section>
 			<footer class="bg-footer">
