Update LHR Woodworking page
Added new cards for placeholders and updated navbar for mobile

--- a/index.html
+++ b/index.html
@@ -59,6 +59,50 @@
 
 						</section>
 					</div>
+
+					<div class="card">
+						<section class="before">
+							<!--					<h3>Before</h3>-->
+							<div class="before-wrapper">
+								<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">
+							</div>
+							<h3>Placeholder</h3>
+
+						</section>
+					</div>
+
+					<div class="card">
+						<section class="before">
+							<!--					<h3>Before</h3>-->
+							<div class="before-wrapper">
+								<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">
+							</div>
+							<h3>Placeholder</h3>
+
+						</section>
+					</div>
+
+					<div class="card">
+						<section class="before">
+							<!--					<h3>Before</h3>-->
+							<div class="before-wrapper">
+								<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">
+							</div>
+							<h3>Placeholder</h3>
+
+						</section>
+					</div>
+
+					<div class="card">
+						<section class="before">
+							<!--					<h3>Before</h3>-->
+							<div class="before-wrapper">
+								<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">
+							</div>
+							<h3>Placeholder</h3>
+
+						</section>
+					</div>
 				</div>
 			</section>
 
