Update LHR Woodworking website
Added SCSS code for possible future use

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Home | LHR Woodworking, LLC</title>
 		<link rel="stylesheet" href="css/styles.css">
+<!--		<link rel="stylesheet" href="css/style.css">-->
 		<link rel="stylesheet" href="css/responsive.css">
 		<link rel="stylesheet" href="css/default.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -103,6 +104,18 @@
 
 						</section>
 					</div>
+
+<!--					<div class="card">-->
+<!--						<div class="carousel-wrapper">-->
+<!--							<div class="carousel-container">-->
+<!--								<div class="carousel">-->
+<!--									<div class="image-one"></div>-->
+<!--									<div class="image-two"></div>-->
+<!--									<div class="image-three"></div>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--					</div>-->
 				</div>
 			</section>
 
