--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Anton&family=Black+Ops+One&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+		<meta http-equiv="Pragma" content="no-cache" />
+		<meta http-equiv="Expires" content="0" />
 	</head>
 	<body>
 		<div class="container">
-			<img src="assets/images/LHR-Grading.png" alt="">
+			<img src="assets/images/LHR-Grading.png" alt="" id="logo">
 			<nav>
-
 				<ul class="navbar-nav">
 					<li class="nav-link">
 						<a href="index.html">Home</a>
@@ -38,84 +40,86 @@
 			<header><h1>LHR Woodworking</h1></header>
 			<section class="products">
 				<h2>Products</h2>
-				<div class="before-after">
-					<div class="card">
-						<section class="before">
-							<!--					<h3>Before</h3>-->
-							<div class="before-wrapper">
-								<img src="assets/images/products/desk-shelf(1).jpg" alt="desk shelf">
-							</div>
-							<h3>Desk Shelf</h3>
+				<div class="products-wrapper">
+					<div class="before-after">
+						<div class="card">
+							<section class="before">
+								<!--					<h3>Before</h3>-->
+								<div class="before-wrapper">
+									<img src="assets/images/products/desk-shelf(1).jpg" alt="desk shelf">
+								</div>
+								<h3>Desk Shelf</h3>
 
-						</section>
+							</section>
+						</div>
+
+						<div class="card">
+							<section class="before">
+								<!--					<h3>Before</h3>-->
+								<div class="before-wrapper">
+									<img src="assets/images/products/desk-shelf(2).jpg" alt="desk shelf">
+								</div>
+								<h3>Desk Shelf</h3>
+
+							</section>
+						</div>
+
+						<div class="card">
+							<section class="before">
+								<!--					<h3>Before</h3>-->
+								<div class="before-wrapper">
+									<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">
+								</div>
+								<h3>Placeholder</h3>
+
+							</section>
+						</div>
+
+						<div class="card">
+							<section class="before">
+								<!--					<h3>Before</h3>-->
+								<div class="before-wrapper">
+									<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">
+								</div>
+								<h3>Placeholder</h3>
+
+							</section>
+						</div>
+
+						<div class="card">
+							<section class="before">
+								<!--					<h3>Before</h3>-->
+								<div class="before-wrapper">
+									<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">
+								</div>
+								<h3>Placeholder</h3>
+
+							</section>
+						</div>
+
+						<div class="card">
+							<section class="before">
+								<!--					<h3>Before</h3>-->
+								<div class="before-wrapper">
+									<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">
+								</div>
+								<h3>Placeholder</h3>
+
+							</section>
+						</div>
+
+	<!--					<div class="card">-->
+	<!--						<div class="carousel-wrapper">-->
+	<!--							<div class="carousel-container">-->
+	<!--								<div class="carousel">-->
+	<!--									<div class="image-one"></div>-->
+	<!--									<div class="image-two"></div>-->
+	<!--									<div class="image-three"></div>-->
+	<!--								</div>-->
+	<!--							</div>-->
+	<!--						</div>-->
+	<!--					</div>-->
 					</div>
-
-					<div class="card">
-						<section class="before">
-							<!--					<h3>Before</h3>-->
-							<div class="before-wrapper">
-								<img src="assets/images/products/desk-shelf(2).jpg" alt="desk shelf">
-							</div>
-							<h3>Desk Shelf</h3>
-
-						</section>
-					</div>
-
-					<div class="card">
-						<section class="before">
-							<!--					<h3>Before</h3>-->
-							<div class="before-wrapper">
-								<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">
-							</div>
-							<h3>Placeholder</h3>
-
-						</section>
-					</div>
-
-					<div class="card">
-						<section class="before">
-							<!--					<h3>Before</h3>-->
-							<div class="before-wrapper">
-								<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">
-							</div>
-							<h3>Placeholder</h3>
-
-						</section>
-					</div>
-
-					<div class="card">
-						<section class="before">
-							<!--					<h3>Before</h3>-->
-							<div class="before-wrapper">
-								<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">
-							</div>
-							<h3>Placeholder</h3>
-
-						</section>
-					</div>
-
-					<div class="card">
-						<section class="before">
-							<!--					<h3>Before</h3>-->
-							<div class="before-wrapper">
-								<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">
-							</div>
-							<h3>Placeholder</h3>
-
-						</section>
-					</div>
-
-<!--					<div class="card">-->
-<!--						<div class="carousel-wrapper">-->
-<!--							<div class="carousel-container">-->
-<!--								<div class="carousel">-->
-<!--									<div class="image-one"></div>-->
-<!--									<div class="image-two"></div>-->
-<!--									<div class="image-three"></div>-->
-<!--								</div>-->
-<!--							</div>-->
-<!--						</div>-->
-<!--					</div>-->
 				</div>
 			</section>
 
