--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<a href="index.html">Home</a>
 					</li>
 					<li class="nav-link">
-						<a href="products.html">Products</a>
+						<a href="gallery.html">Gallery</a>
 					</li>
 					<li class="nav-link">
 						<a href="contact.html">Contact</a>
@@ -39,7 +39,15 @@
 
 			<header><h1>LHR Woodworking</h1></header>
 			<section class="products">
-				<h2>Products</h2>
+					<h1>Welcome</h1>
+					<p>Hi, my name is Landon Reaves and I am the Owner/Operator of LHR Excavation & Grading, LLC. I am based out of
+						Newton, NC and serve Catawba County and the surrounding counties as well. I primarily use a Bobcat E50
+						mini-excavator and specialize in land/lot clearing, small grading projects, tree removal, shrub/bush removal,
+						pond landscaping, gravel or dirt road repair, culvert removal or installation, small building demolition and
+						more! I am a fully insured service provider and always have safety first in mind. Please reach out to me through
+						phone call, text or Email. Thank you!
+					</p>
+				<h2>Gallery</h2>
 				<div class="products-wrapper">
 					<div class="before-after">
 						<div class="card">
