--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
 			<header><h1>LHR Woodworking</h1></header>
 			<section class="products">
 					<h1>Welcome</h1>
-					<p>Hi, my name is Landon Reaves and I am the Owner/Operator of LHR Excavation & Grading, LLC. I am based out of
-						Newton, NC and serve Catawba County and the surrounding counties as well. I primarily use a Bobcat E50
-						mini-excavator and specialize in land/lot clearing, small grading projects, tree removal, shrub/bush removal,
-						pond landscaping, gravel or dirt road repair, culvert removal or installation, small building demolition and
-						more! I am a fully insured service provider and always have safety first in mind. Please reach out to me through
-						phone call, text or Email. Thank you!
+					<p>Hi, my name is Landon Reaves and I am the Owner/Operator of LHR Woodworking. I primarily make custom tables
+						of all kinds including epoxy river tables, end tables, coffee tables, and live edge oak wood tables of
+						various shapes and sizes. I can also make shelves, display cases, small signs, picture frames and many other
+						custom items.
 					</p>
 				<h2>Gallery</h2>
 				<div class="products-wrapper">
