Update LHR Woodworking
Added new images, adjusted border-radius, and added a scrollTop button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<meta http-equiv="Expires" content="0" />
 	</head>
 	<body>
+		<div id="pageTop"></div>
 		<div class="container">
 			<img src="assets/images/LHR-Grading.png" alt="" id="logo">
 			<nav>
@@ -48,13 +49,35 @@
 				<h2>Gallery</h2>
 				<div class="products-wrapper">
 					<div class="before-after">
+<!--						<div class="card">-->
+<!--							<section class="before">-->
+<!--								&lt;!&ndash;					<h3>Before</h3>&ndash;&gt;-->
+<!--								<div class="before-wrapper">-->
+<!--									<img src="assets/images/photos/desk-shelf(1).jpg" alt="desk shelf">-->
+<!--								</div>-->
+<!--								<h3>Desk Shelf</h3>-->
+
+<!--							</section>-->
+<!--						</div>-->
+
+<!--						<div class="card">-->
+<!--							<section class="before">-->
+<!--								&lt;!&ndash;					<h3>Before</h3>&ndash;&gt;-->
+<!--								<div class="before-wrapper">-->
+<!--									<img src="assets/images/photos/desk-shelf(2).jpg" alt="desk shelf">-->
+<!--								</div>-->
+<!--								<h3>Desk Shelf</h3>-->
+
+<!--							</section>-->
+<!--						</div>-->
+
 						<div class="card">
 							<section class="before">
 								<!--					<h3>Before</h3>-->
 								<div class="before-wrapper">
-									<img src="assets/images/products/desk-shelf(1).jpg" alt="desk shelf">
+									<img src="assets/images/photos/IMG_0252.jpg" alt="a dark colored wooden coffee table">
 								</div>
-								<h3>Desk Shelf</h3>
+								<h3>Coffee table</h3>
 
 							</section>
 						</div>
@@ -63,9 +86,9 @@
 							<section class="before">
 								<!--					<h3>Before</h3>-->
 								<div class="before-wrapper">
-									<img src="assets/images/products/desk-shelf(2).jpg" alt="desk shelf">
+									<img src="assets/images/photos/box-with-stand.jpg" alt="a wooden box sitting on a wooden stand">
 								</div>
-								<h3>Desk Shelf</h3>
+								<h3>Box with stand</h3>
 
 							</section>
 						</div>
@@ -74,57 +97,34 @@
 							<section class="before">
 								<!--					<h3>Before</h3>-->
 								<div class="before-wrapper">
-									<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">
+									<img src="assets/images/photos/custom-record-board.png" alt="placeholder">
 								</div>
-								<h3>Placeholder</h3>
+								<h3>Custom etched record backboard</h3>
 
 							</section>
 						</div>
 
-						<div class="card">
-							<section class="before">
-								<!--					<h3>Before</h3>-->
-								<div class="before-wrapper">
-									<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">
-								</div>
-								<h3>Placeholder</h3>
+<!--						<div class="card">-->
+<!--							<section class="before">-->
+<!--								&lt;!&ndash;					<h3>Before</h3>&ndash;&gt;-->
+<!--								<div class="before-wrapper">-->
+<!--									<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">-->
+<!--								</div>-->
+<!--								<h3>Placeholder</h3>-->
 
-							</section>
-						</div>
+<!--							</section>-->
+<!--						</div>-->
 
-						<div class="card">
-							<section class="before">
-								<!--					<h3>Before</h3>-->
-								<div class="before-wrapper">
-									<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">
-								</div>
-								<h3>Placeholder</h3>
+<!--						<div class="card">-->
+<!--							<section class="before">-->
+<!--								&lt;!&ndash;					<h3>Before</h3>&ndash;&gt;-->
+<!--								<div class="before-wrapper">-->
+<!--									<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">-->
+<!--								</div>-->
+<!--								<h3>Placeholder</h3>-->
 
-							</section>
-						</div>
-
-						<div class="card">
-							<section class="before">
-								<!--					<h3>Before</h3>-->
-								<div class="before-wrapper">
-									<img src="https://dummyimage.com/640x660/a62216/fff.png" alt="placeholder">
-								</div>
-								<h3>Placeholder</h3>
-
-							</section>
-						</div>
-
-	<!--					<div class="card">-->
-	<!--						<div class="carousel-wrapper">-->
-	<!--							<div class="carousel-container">-->
-	<!--								<div class="carousel">-->
-	<!--									<div class="image-one"></div>-->
-	<!--									<div class="image-two"></div>-->
-	<!--									<div class="image-three"></div>-->
-	<!--								</div>-->
-	<!--							</div>-->
-	<!--						</div>-->
-	<!--					</div>-->
+<!--							</section>-->
+<!--						</div>-->
 					</div>
 				</div>
 			</section>
@@ -202,6 +202,8 @@
 					</div>
 				</section>
 			</footer>
+
+			<a id="scrollUp" href="#pageTop"><img class="arrow2" src="./assets/images/photos/arrow.svg" alt=""></a>
 		</div>
 	</body>
 </html>
